--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -22,6 +22,9 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Lint check
+        run: 
+
       - name: Run Tests
         run: npm test
 
